--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simpe duck-be for having fun",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "PORT=8081 node server.js"
   },
   "repository": {
     "type": "git",
